--- a/style.css
+++ b/style.css
@@ -1,98 +1,92 @@
-/* ページ内共通設定とgoogleFont */
 html {
-  font-size: 100%; /* ユーザの指定した文字サイズを正しく反映させるため */
-  font-family: "Indie Flower", cursive; /*Googleフォントの指定*/
+  font-size: 100%;
+  font-family: "Indie Flower", cursive;
 }
 
 h1,
 h2 {
   margin-left: 2%;
 }
-/*ここまで*/
 
-/*フルスクリーンの画像。background-size: coverは、画像をコンテナーいっぱいにできるだけ大きく拡大縮小し、
-必要に応じて画像を引き伸ばします。
-画像の比率が要素と異なる場合は、何もない空間が残らないように、上下または左右が切り取られる。*/
-/*linear-gradient(#c9ffbf, #ffafbd)で画面にグラデーションをつける。lineae(リニア)は縦方向のしま。
-to left top,は右下から左上にグラデーション
- background-blend-mode:multiply… 絵具を混ぜたような結果となる*/
+img {
+  max-width: 100%;
+}
+
+body {
+  overflow-x: hidden;
+}
+
 .big-bg {
   background-size: cover;
   background-position: center top;
-  background-image: url(./images/IMG_3949.jpg),
+  background-image: url(./images/fullscreen2.png),
     linear-gradient(to left top, #d3c876, #ffffff, #6af8f1);
   background-blend-mode: multiply;
   min-height: 100vh;
 }
 
-img {
-  max-width: 100%;
-} /*画像が親要素より大きくなることを防ぐ*/
-
-/*ヘッダー関係*/
 .page-header h1 {
   font-size: 4em;
   margin: 0 0 0 0.5em;
+  color: rgb(223, 152, 52);
 }
 .main-nav {
   display: flex;
   font-size: 1.25em;
-  list-style: none; /*リストのくろボッチなし*/
+  list-style: none;
 }
 .main-nav li {
-  margin: 10px 0 0 36px;
+  margin: 1.5em 2em 0 36px;
 }
 .main-nav a {
-  color: #432;
+  color: rgb(223, 152, 52);
 }
 .main-nav a:hover {
-  color: #43853d; /*hoverは元から要素の要されているクラス。プロパティの.onclickみたいなもの*/
+  color: #d55c54;
 }
 .page-header {
-  display: flex; /*横並び*/
-  justify-content: space-between; /*flexと指定されたアイテムの間や周囲に空間を配置する方法を定義*/
-  max-width: 1100px;
-  margin: 0 auto; /*ブロック要素を中央揃えにできる。例えばdiv,pなど。インライン要素imgなどはできない>*/
+  display: flex;
+  justify-content: space-between;
+  max-width: 1600px;
+  margin: 0 auto;
+  background: rgb(0, 0, 0);
+  opacity: 70%;
 }
 
-/*フェードイン*/
 .fadein-before {
-  opacity: 0; /*透過度0で表示されない*/
-  transform: translate(30px); /*要素を元々100px右に配置しておく*/
-  transition: opacity 1s, transform 1s; /*透過度と表示位置を1秒かけて変化させる*/
+  opacity: 0;
+  transform: translate(100px);
+  transition: opacity 1s, transform 1s;
 }
 
 .fadein-after {
   opacity: 1;
-  transform: translate(0); /*元の位置に戻す*/
+  transform: translate(0);
 }
 
-/*全体の要素の配置について*/
 .divspace {
   display: flex;
-  flex-flow: colum;
-  align-items: flex-start; /*もともとstretchで高い方の要素の長さに合わせて表示されるから画像が引き伸ばされる */
+  flex-flow: row wrap;
+  align-items: flex-start;
 }
 
-/*メインコンテンツ植物写真*/
 .plant {
   width: 40%;
   max-width: 300px;
   min-width: 200px;
-  margin: 0 0 0 2em;
+  margin: 2em 0 0 3em;
 }
-/*メインコンテンツリフティング写真*/
+
 .Lifting {
   width: 40%;
   max-width: 300px;
   min-width: 200px;
-  margin: 0 0 0 2em;
+  margin: 3em 0 0 3em;
 }
 .removepicture {
   display: none;
 }
 
-/*Basic inromation,Background,Favorite thingsの設定*/
 .titlespace {
   margin: 1em 0 1.5em 0;
   font-size: 2.5em;
@@ -102,20 +96,16 @@ img {
   margin: 2em 0 1.5em 0;
   height: 7vh;
   font-size: 2.5em;
-  /* white-space: nowrap; 改行させない */
 }
 
 .basic_l_and_a {
-  margin: 1em 0 0 4em;
-  /* white-space: nowrap; 改行させない */
+  margin: 7em 7.65em 5em 8em;
 }
 .basic_l_and_a_2 {
-  margin: 1em 0 0 2em;
-  /* white-space: nowrap; 改行させない */
+  margin: 5.5em 4em 1em 4em;
 }
 .basic_l_and_a_3 {
-  margin: 1em 0 0 4em;
-  /* white-space: nowrap; 改行させない */
+  margin: 8em 4em 1em 6em;
 }
 
 .basic_label {
@@ -127,16 +117,13 @@ img {
   font-size: 2em;
 }
 
-/*フッター*/
-/* footer {
-  height: 2em;
-  background-color: rgb(85, 84, 82);
-} */
 .FFF {
+  margin: 5em 0 0 0;
   text-align: center;
+  background: rgb(131, 113, 95);
 }
 .icon {
-  margin: 20px 20px 20px 20px;
+  margin: 20px 20px 15px 20px;
   text-align: center;
   width: 30px;
   height: 30px;
